import Vehiculo from "../vehiculos/Vehiculo";

export default interface temporadas {
  PorcentajePorTemporada(vehiculo:Vehiculo):number
}